--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "expo-cli": "^2.10.0",
     "husky": "^1.3.1",
     "jest-expo": "^32.0.0",
     "lint-staged": "^8.1.3",
