--- a/app.json
+++ b/app.json
@@ -1,30 +1,4 @@
 {
-  "expo": {
-    "name": "aolf-teacher-app",
-    "slug": "aol-teacher-app",
-    "privacy": "unlisted",
-    "sdkVersion": "32.0.0",
-    "platforms": ["ios", "android"],
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#4b5487"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": ["assets/*"],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.aolf.mobile.teacher",
-      "buildNumber": "1.0.0"
-    },
-    "android": {
-      "package": "com.aolf.mobile.teacher",
-      "versionCode": 1
-    }
-  }
+  "displayName": "AOLF-TEACHER",
+  "name": "aolfTeacherApp"
 }
