--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "heroku-postbuild": "./ci_set_env.sh && ./ci_publish_to_expo.sh",
-    "start": "[ \"$NODE_ENV\" = \"production\" ] && echo \"Skipping build\" || expo start -c",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "eject": "expo eject",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "node ./node_modules/jest/bin/jest.js --watchAll",
     "precommit": "lint-staged"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "react-native"
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^9.0.0",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
-    "expo": "^32.0.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "native-base": "^2.11.0",
@@ -36,7 +33,7 @@
     "babel-preset-expo": "^5.0.0",
     "expo-cli": "^2.10.0",
     "husky": "^1.3.1",
-    "jest-expo": "^32.0.0",
+    "jest": "^24.1.0",
     "lint-staged": "^8.1.3",
     "prettier": "^1.16.4"
   },
