--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": ">=8.3",
+    "npm": ">=6.0.0"
+  },
   "scripts": {
     "heroku-postbuild": "./ci_set_env.sh && ./ci_publish_to_expo.sh",
     "start": "react-native start",
