--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^9.0.0",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "expo": "^32.0.0",
+    "formik": "^1.5.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "native-base": "^2.11.0",
@@ -25,12 +26,18 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.0.0",
     "react-native-expo-image-cache": "^3.2.0",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-ripple": "^0.8.0",
+    "react-native-material-textfield": "^0.12.0",
+    "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-offline": "^4.3.0",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.26.10"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
