--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ cache:
 before_script:
   - npm install -g npm@latest
 script:
-  - npm ci
+  - yarn install
 jobs:
   include:
     - stage: deploy
       node_js: lts/*
       script:
-        - npm ci
+        - yarn install
         - npx expo login -u $EXPO_USERNAME -p $EXPO_PASSWORD
         - npx expo publish --release-channel $EXP_RELEASE_CHANNEL
