--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
     - ~/.npm
     - .jest
 before_script:
-  - npm install -g npm@latest
+  - npm install -g yarn
 script:
   - yarn install
 jobs:
