--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ cache:
     - ~/.npm
     - .jest
 before_script:
-  - npm install -g yarn
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version version-number
+  - export PATH="$HOME/.yarn/bin:$PATH"
 script:
   - yarn install
 jobs:
